# jsonsubschema

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
jsonsubschema/: __init__.py  _canoncalization.py  _canonicalization.py  _checkers.py  _constants.py  _types.py  _utils.py  api.py  checker.py  cli.py  config.py  exceptions.py  test.py  testjsonschema.py
jsonsubschema/old/: _jsonschema.py
jsonsubschema/test/: test_array.py  test_mix.py  test_numeric.py  test_object.py  test_string.py
python/: ArraySubTypeChecker.py  JsonType.py  NumberSubTypeChecker.py  StringSubTypeChecker.py  SubShemaChecker.py  SubTypeChecker.py  Utils.py  _constants.py  _normalizer.py  _types.py  _utils.py  checkers.py  subschemachecker.py
python/test/: test_array.py  test_number.py  test_numeric.py
test/: test_ai_subschema.py  test_api.py  test_array.py  test_boolean.py  test_checkers.py  test_const.py  test_enum.py  test_from_lale.py  test_mix.py  test_more.py  test_null.py  test_numeric.py  test_object.py  test_refs.py  test_schema_errors.py  test_string.py
