[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonsubschema"
version = "0.0.7"
description = "A tool to check whether a JSON schema is subset/subschema of another JSON schema"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Andrew Habib", email = "andrew.a.habib@gmail.com"},
    {name = "Avraham Shinnar"},
    {name = "Martin Hirzel"},
]
requires-python = ">=3.8"
dependencies = [
    "portion",
    "greenery>=4.0.0",
    "jsonschema",
    "jsonref",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/IBM/jsonsubschema"
Repository = "https://github.com/IBM/jsonsubschema"
"Bug Tracker" = "https://github.com/IBM/jsonsubschema/issues"

[project.scripts]
jsonsubschema = "jsonsubschema.cli:main"

[tool.setuptools.packages.find]
include = ["jsonsubschema*"]